--- a/style.css
+++ b/style.css
@@ -82,10 +82,31 @@ body {
 
 /*Login-Seite Login-Kasten*/
 
+.loginContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .loginHeadline {
   font-family: Inter;
   font-size: 61px;
   font-weight: 700;
   line-height: 73.2px;
   text-align: center;
+  position: relative;
+  width: 315px;
+  height: 73px;
+}
+
+.loginHeadline::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(
+    -50%
+  );
+  width: 150px;
+  border-bottom: 3px solid #29abe2;
 }
