--- a/css/legal_notice.css
+++ b/css/legal_notice.css
@@ -1,37 +1,37 @@
 @font-face {
     font-family: inter;
-    src: url('./fonts/inter-v13-latin-100.woff2');
+    src: url('../fonts/inter-v13-latin-100.woff2');
 }
 @font-face {
     font-family: inter;
-    src: url('./fonts/inter-v13-latin-200.woff2');
+    src: url('../fonts/inter-v13-latin-200.woff2');
 }
 @font-face {
     font-family: inter;
-    src: url('./fonts/inter-v13-latin-300.woff2');
+    src: url('../fonts/inter-v13-latin-300.woff2');
 }
 @font-face {
     font-family: inter;
-    src: url('./fonts/inter-v13-latin-500.woff2');
+    src: url('../fonts/inter-v13-latin-500.woff2');
 }
 @font-face {
     font-family: inter;
-    src: url('./fonts/inter-v13-latin-600.woff2');
+    src: url('../fonts/inter-v13-latin-600.woff2');
 }
 @font-face {
     font-family: inter;
-    src: url('./fonts/inter-v13-latin-700.woff2');
+    src: url('../fonts/inter-v13-latin-700.woff2');
 }@font-face {
     font-family: inter;
-    src: url('./fonts/inter-v13-latin-800.woff2');
+    src: url('../fonts/inter-v13-latin-800.woff2');
 }
 @font-face {
     font-family: inter;
-    src: url('./fonts/inter-v13-latin-900.woff2');
+    src: url('../fonts/inter-v13-latin-900.woff2');
 }
 @font-face {
     font-family: inter;
-    src: url('./fonts/inter-v13-latin-regular.woff2');
+    src: url('../fonts/inter-v13-latin-regular.woff2');
 }
 
 
@@ -42,7 +42,7 @@
 }
 
 html {
-    font-family: "Inter", sans-serif;
+    font-family: "inter","sans-serif";
     color: #000000;
     background-color: rgb(246,247,248);
 }
@@ -50,6 +50,8 @@ html {
 .content {
     max-width: 1014px;
     height: 943px;
+    overflow-y: auto;
+    scrollbar-width: none;
 }
 
 .m-left-328 {
@@ -70,10 +72,6 @@ h1 {
     color: #000000;
 }
 
-h2 {
-    font-weight: 700;
-}
-
 ul {
     margin-left: 30px;
 }
@@ -88,4 +86,15 @@ ul {
     position: absolute;
     left: 1307px;
     top: 225px;
+}
+
+.imprint {
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.imprint-headline {
+    font-weight: 700;
+    font-size: 27px;
+    line-height: 19.2px;
 }
