--- a/style.css
+++ b/style.css
@@ -82,11 +82,23 @@ body {
 
 /*Login-Seite Login-Kasten*/
 
-.loginContainer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.loginContainer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #ffffff;
+  width: 422px;
+  height: 397px;
+  left: 394px;
+  top: 265.5px;
+  padding: 48px 115px 48px 115px;
+  border-radius: 30px;
+  gap: 32px;
+  box-shadow: 0px 0px 14px 3px #0000000a;
+  position: absolute;
 }
+
+/*Login-Überschrift*/
 
 .loginHeadline {
   font-family: Inter;
@@ -97,6 +109,10 @@ body {
   position: relative;
   width: 315px;
   height: 89px;
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+  margin: 0;
 }
 
 .loginHeadline::after {
@@ -104,9 +120,134 @@ body {
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translateX(
-    -50%
-  );
+  transform: translateX(-50%);
   width: 150px;
   border-bottom: 3px solid #29abe2;
+}
+
+/*Loginkästchen*/
+
+.mainCredentials {
+  height: 196px;
+  width: 422px;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.loginInputFields {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 422px;
+  height: 152px;
+  gap: 32px;
+}
+
+.loginEmail {
+  background-image: url(./assets/img/mailIcon.png);
+  background-repeat: no-repeat;
+  width: 380px;
+  height: 24px;
+  gap: 10px;
+  display: flex;
+  border-radius: 10px;
+  padding: 12px 21px 12px 21px;
+  border: 1px solid #d1d1d1;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #d1d1d1;
+}
+
+.loginPassword {
+  width: 380px;
+  gap: 8px;
+  display: flex;
+  height: 24px;
+  padding: 12px 21px 12px 21px;
+  gap: 10px;
+  border-radius: 10px;
+  border: 1px solid #d1d1d1;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
+
+/*Remember-Abschnitt*/
+
+.rememberMeSection {
+  display: flex;
+  width: 142px;
+  height: 24px;
+  gap: 8px;
+  left: 39px;
+  position: relative;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19.2px;
+  text-align: left;
+  align-items: center;
+}
+
+/*Login-Abschnitt Buttons*/
+
+.loginButtons {
+  display: flex;
+  width: 322px;
+  height: 48px;
+  gap: 35px;
+}
+
+.mainpageLoginButton {
+  grid-template-columns: max-content;
+  width: 110px;
+  height: 48px;
+  padding: 15px 24px 15px 24px;
+  gap: 10px;
+  border-radius: 8px;
+  background: #2a3647;
+  color: #ffffff;
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 25.2px;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.mainpageLoginButton:hover {
+  background-color: #29abe2;
+  border: none;
+  box-shadow: 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.mainpageGuestButton {
+  grid-template-columns: max-content;
+  display: grid;
+  width: 177px;
+  height: 48px;
+  padding: 15px 24px 15px 24px;
+  gap: 10px;
+  border-radius: 8px;
+  border: 1px solid #2a3647;
+  background-color: #ffffff;
+  font-family: Inter;
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 25.2px;
+  text-align: left;
+  color: #2a3647;
+  align-content: center;
+  justify-content: center;
+}
+
+.mainpageGuestButton:hover {
+  color: #29abe2;
+  border: 1px solid #29abe2;
+  box-shadow: 0 5px rgba(0, 0, 0, 0.1);
 }
