--- a/style.css
+++ b/style.css
@@ -21,19 +21,22 @@ body {
   top: 345px;
   left: 583px;
   gap: 0px;
-  transition: transform 300ms ease-in-out, width 300ms ease-in-out,
-    height 300ms ease-in-out, top 300ms ease-in-out, left 300ms ease-in-out;
+  transition: transform 400ms ease-in-out, width 400ms ease-in-out,
+    height 400ms ease-in-out, top 400ms ease-in-out, left 400ms ease-in-out;
 }
 
 /*Mainpage*/
 
 .hiddenMainpage {
-  display: none;
+  opacity: 0;
+  visibility: hidden;
 }
 
-/*.visibleMainpage {
-  display: block;
-}*/
+.visibleMainpage {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 100ms ease-in-out, visibility 100ms ease-in-out;
+}
 
 /*Login-Seite rechts oben*/
 
