--- a/assets/templates/templates.css
+++ b/assets/templates/templates.css
@@ -28,13 +28,13 @@ nav{
 }
 
 p{
-    font-family: "Inter";
+    font-family: "inter";
     font-weight: 400;
 }
 
 .headerTitel{
     color: rgba(0, 0, 0, 1);
-    font-family: "Inter";
+    font-family: "inter";
     font-size: 20px;
     font-weight: 400;
 }
