add top part Board

--- a/assets/templates/desktop_template.html
+++ b/assets/templates/desktop_template.html
@@ -25,25 +25,25 @@
                 <div class="iconSidebar flex_center">
                     <div class="imgSidebar imgSummary"></div>
                 </div>
-                <p>Summary</p>
+                <p class="menuSidebarHover">Summary</p>
             </div>
             <div class="menuFrames" onclick="">
                 <div class="iconSidebar flex_center">
                     <div class="imgSidebar imgAddTask"></div>
                 </div>
-                <p>Add Task</p>
+                <p class="menuSidebarHover">Add Task</p>
             </div>
             <div class="menuFrames" onclick="">
                 <div class="iconSidebar flex_center">
                     <div class="imgSidebar imgBoard"></div>
                 </div>
-                <p>Board</p> 
+                <p class="menuSidebarHover">Board</p> 
             </div>
             <div class="menuFrames" onclick="">
                 <div class="iconSidebar flex_center">
                     <div class="imgSidebar imgContacts"></div>
                 </div>
-                <p>Contacts</p>
+                <p class="menuSidebarHover">Contacts</p>
             </div>
         </div>
         <div class="privacySidebar">
