--- a/assets/templates/templates.css
+++ b/assets/templates/templates.css
@@ -1,8 +1,8 @@
-body{
+/* body{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
+} */
 
 header{
     width: calc(1440px - 40px - 348px);
@@ -12,6 +12,7 @@ header{
     justify-content: space-between;
     align-items: center;
     box-shadow: 0 4px 4px 0px rgba(0, 0, 0, 0.1);
+    background-color: white;
 }
 
 nav{
@@ -37,6 +38,7 @@ p{
     font-family: "inter";
     font-size: 20px;
     font-weight: 400;
+    line-height: 19.2px;
 }
 
 .headerImg{
@@ -99,6 +101,7 @@ p{
     gap: 15px;
     color: rgba(205, 205, 205, 1);
     font-size: 16px;
+    line-height: 19.2px;
 }
 
 .menuFrames{
@@ -131,6 +134,7 @@ p{
     flex-direction: column;
     color: rgba(168, 168, 168, 1);
     font-size: 16px;
+    line-height: 19.2px;
 }
 
 .privacyColor{
@@ -155,6 +159,10 @@ p{
     object-fit: cover;
     background-position: center;
     background-size: cover;
+}
+
+.menuFrames:hover .menuSidebarHover{
+    font-weight: 700;
 }
 
 .menuFrames:hover{
