--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
   height: 1024px;
   background-color: #f6f7f8;
   font-family: "Inter";
+  box-sizing: border-box;
+  margin: 0;
 }
 
 /*CSS für Mainpage*/
