--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
   height: 1024px;
   background-color: #f6f7f8;
   font-family: "Inter";
+  box-sizing: border-box;
+  margin: 0;
 }
 
 /*CSS für Mainpage*/
@@ -178,6 +180,7 @@ body {
 input[type="email"]:focus,
 input[type="password"]:focus {
   border: 1px solid #29abe2 !important;
+  outline: none;
 }
 
 .loginPassword {
