--- a/css/help.css
+++ b/css/help.css
@@ -13,18 +13,24 @@ html {
     margin-left: 328px;
 }
 
+.head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 100px;
+}
+
 .container {
     max-width: 1014px;
-    height: 943px;
+    height: 840px;
     overflow-y: auto;
     scrollbar-width: none;
-    margin-top: 206px;
     margin-left: 328px;
     gap: 30px;
 }
 
 h1 {
-    font-size: 47px;
+    font-size: 61px;
     font-weight: 700;
     line-height: 56.4px;
 }
@@ -42,13 +48,10 @@ p {
 }
 
 .arrow-backwards {
-    width: 37px;
-    height: 37px;
+    width: 21.33px;
+    height: 20.74px;
 }
 
 .arrow-backwards-link {
     color: #29ABE2;
-    position: absolute;
-    left: 1307px;
-    top: 225px;
 }
