--- a/css/add_task.css
+++ b/css/add_task.css
@@ -3,3 +3,45 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html {
+    font-family: "inter", "sans-serif";
+}
+
+.m-left-328 {
+    margin-left: 328px;
+}
+
+.head {
+    margin-top: 100px;
+}
+
+h1 {
+    font-size: 61px;
+}
+
+.content-left {
+    display: flex;
+    flex-direction: column;
+    width: 440px;
+}
+
+#input-title {
+    border: 1px solid #D1D1D1;
+    border-radius: 10px;
+    padding: 12px 21px;
+}
+
+.input-star {
+    color: #FF8190;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+}
+
+#input-description {
+    border: 1px solid #D1D1D1;
+    border-radius: 10px;
+    padding: 18px 16px;
+    gap: 8px;
+}
