--- a/css/signup.css
+++ b/css/signup.css
@@ -246,3 +246,8 @@ input[type="password"].error {
   box-shadow: 0px 4px 4px 0px #00000040;
 }
 
+#signupButton:disabled {
+  background-color: lightgray;
+  color: darkgray;
+  cursor: not-allowed;
+}
