--- a/css/add_task.css
+++ b/css/add_task.css
@@ -6,6 +6,7 @@
 
 html {
     font-family: "inter", "sans-serif";
+    background-color: #F6F7F8;
 }
 
 .m-left-328 {
@@ -14,34 +15,154 @@ html {
 
 .head {
     margin-top: 100px;
+    margin-bottom: 40px;
 }
 
 h1 {
     font-size: 61px;
 }
 
-.content-left {
-    display: flex;
-    flex-direction: column;
-    width: 440px;
-}
-
-#input-title {
-    border: 1px solid #D1D1D1;
+.btn {
+    width: 136px;
+    height: 56px;
     border-radius: 10px;
-    padding: 12px 21px;
+    padding: 16px 10px;
+    line-height: 24px;
+    background-color: #FFFFFF;
+    cursor: pointer;
 }
 
-.input-star {
+.span-star {
     color: #FF8190;
     font-weight: 400;
     font-size: 20px;
     line-height: 24px;
 }
 
-#input-description {
+#content {
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+}
+
+input {
     border: 1px solid #D1D1D1;
     border-radius: 10px;
+    height: 48px;
+    width: 440px;
+    font-size: 20px;
+}
+
+.content-left,
+.content-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 440px;
+    height: 376px;
+}
+
+.urgent-image {
+    background-image: url(../assets/img/Property\ 1=Urgent.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.medium-image {
+    background-image: url(../assets/img/Property\ 1=Medium.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.low-image {
+    background-image: url(../assets/img/Property\ 1=Low.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+#input-title,
+#input-description,
+#input-assigned {
+    font-size: 20px;
+}
+
+#input-assigny,
+#input-category {
+    width: 440px;
+    height: 48px;
+    padding: 12px 16px;
+}
+
+
+#input-title {
+    padding: 12px 21px;
+    margin-bottom: 20px;
+}
+
+#input-description {
     padding: 18px 16px;
     gap: 8px;
+    margin-bottom: 20px;
+    padding: 18px 16px;
+    border-radius: 10px;
+    border: 1px solid #D1D1D1;
 }
+
+#input-assigned {
+    padding: 12px 21px;
+}
+
+.seperator {
+    width: 0;
+    height: 424px;
+    border: 1px solid #D1D1D1;
+}
+
+.input-prio-span {
+    width: 440px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#input-date {
+    padding: 12px 16px;
+    margin-bottom: 20px;
+}
+
+.footer {
+    margin-top: 150px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+}
+
+.btn-footer-clear,
+.btn-footer-create {
+    height: 56px;
+    border-radius: 10px;
+    border: 1px solid #2A3647;
+    padding: 16px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.btn-footer-create {
+    width: 110px;
+    background-image: url(../assets/img/Property\ 1=check.svg);
+    background-repeat: no-repeat;
+    background-position-x: 150px;
+    background-position-y: 15px;
+    background-color: #2A3647;
+    color: white;
+}
+
+.btn-footer-create {
+    width: 183px;
+}
+
+.btn-footer-create:active {
+    background-color: #29ABE2;
+    color: white;
+}
+
