Fehler behoben -> Template Bilder werden nicht richtig angezeigt

--- a/assets/templates/desktop_template.html
+++ b/assets/templates/desktop_template.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./templates.css">
+    <link rel="stylesheet" href="../../assets/templates/templates.css">
     <link rel="stylesheet" href="../../fonts.css" />
 </head>
 <body>
     <header>
         <div class="headerTitel">Kanban Project Management Tool</div>
         <div class="headerImg">
-            <div class="boundingHelp"><img class="imgHelp" src="../img/help.png" alt=""></div>
+            <div class="boundingHelp"><img class="imgHelp" src="../../assets/img/help.png" alt=""></div>
             <div class="boundingProfil">
                 <p>SM</p>
             </div>
@@ -19,7 +19,7 @@
     </header>
 
     <nav>
-        <img class="logoSidebar" src="../img/logoSidebar.png" alt="">
+        <img class="logoSidebar" src="../../assets/img/logoSidebar.png" alt="">
         <div class="menuSidebar">
             <div class="menuFrames" onclick="">
                 <div class="iconSidebar flex_center">
