--- a/assets/templates/templates.css
+++ b/assets/templates/templates.css
@@ -1,12 +1,12 @@
-/* body{
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-} */
+}
 
 header{
-    width: calc(1440px - 40px - 348px);
-    height: calc(96px - 20px - 20px);
+    width: 1440px;
+    height: 96px;
     padding: 20px 40px 20px 348px;
     display: flex;
     justify-content: space-between;
@@ -19,7 +19,7 @@ nav{
     position: absolute;
     top: 0;
     background-color: rgba(42, 54, 71, 1);
-    height: 896px;
+    height: 1024px;
     width: 232px;
     padding: 64px 0px 64px 0px;
     display: flex;
@@ -105,7 +105,7 @@ p{
 }
 
 .menuFrames{
-    width: 126px;
+    width: 232px;
     height: 30px;
     gap: 8px;
     padding: 8px 53px 8px 53px;
@@ -126,8 +126,8 @@ p{
 }
 
 .privacySidebar{
-    width: 180px;
-    height: 74px;
+    width: 232px;
+    height: 317px;
     gap: 4px;
     padding: 243px 0px 0px 52px;
     display: flex;
