--- a/css/add_task.css
+++ b/css/add_task.css
@@ -111,6 +111,8 @@ input {
     padding: 18px 16px;
     border-radius: 10px;
     border: 1px solid #D1D1D1;
+    max-width: 440px;
+    max-height: 200px;
 }
 
 #input-assigned {
@@ -123,6 +125,54 @@ input {
     border: 1px solid #D1D1D1;
 }
 
+#input-prio1 {
+    background-image: url(../assets/img/urgent_button.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 136px;
+    height: 56px;
+    cursor: pointer;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 25%);
+    border-radius: 10px;
+}
+
+#input-prio1:hover {
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0);
+    border-radius: 10px;
+}
+
+#input-prio2 {
+    background-image: url(../assets/img/medium_button.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 136px;
+    height: 56px;
+    cursor: pointer;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 25%);
+    border-radius: 10px;
+}
+
+#input-prio2:hover {
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0);
+    border-radius: 10px;
+}
+
+#input-prio3 {
+    background-image: url(../assets/img/low_button.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 136px;
+    height: 56px;
+    cursor: pointer;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 25%);
+    border-radius: 10px;
+}
+
+#input-prio3:hover {
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0);
+    border-radius: 10px;
+}
+
 .input-prio-span {
     width: 440px;
     display: flex;
@@ -132,15 +182,17 @@ input {
 #input-date {
     padding: 12px 16px;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 #input-subtask {
     padding: 12px 16px;
-    background-image: url(../assets/img/Property=add.svg);
-    background-repeat: no-repeat;
-    background-position: right 12px;
-    background-position-x: 400px;
     cursor: pointer;
+    position: relative;
+}
+
+.input-subtask-span {
+    position: absolute;
 }
 
 .footer {
