--- a/css/contacts.css
+++ b/css/contacts.css
@@ -13,6 +13,11 @@ body {
 }
 
 /*Overlay*/
+
+.hidden {
+  display: none;
+}
+
 .addNewContactOverlay {
   position: fixed;
   top: 50%;
@@ -26,6 +31,24 @@ body {
   z-index: 999;
   border-radius: 30px;
   opacity: 1;
+}
+
+/*Overlay-Fenster schließen*/
+
+.closeOverlay {
+  position: absolute;
+  top: 48px;
+  left: 1132px;
+  width: 32px;
+  height: 32px;
+  padding: 4px;
+  border-radius: 56px;
+  cursor: pointer;
+}
+
+.closeOverlayIcon:hover {
+  background-color: #d1d1d1;
+  border-radius: 50%;
 }
 
 /*Overlay links*/
@@ -68,12 +91,13 @@ body {
   width: 90px;
   border: 3px solid #29abe2;
   border-radius: 3px;
+  margin-top: 10px;
 }
 
 /*Overlay rechts*/
 
 .rightOverlayContent {
-  /* Stile für den rechten Inhalt*/
+  display: flex;
 }
 
 .overlayPersonLargeImg {
@@ -82,9 +106,26 @@ body {
   top: 204px;
   left: 550px;
   border-radius: 70px;
-  border: 3px;
   border: 3px solid #ffffff;
   background: #d1d1d1;
+  position: absolute;
+  box-shadow: 0px 0px 4px 0px #0000001a;
+}
+
+.overlayPersonLargeImg img {
+  width: 64px;
+  height: 64px;
+}
+
+.overlayInputContainer {
+  width: 422px;
+  height: 215px;
+  top: 137px;
+  left: 742px;
+  gap: 32px;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
 }
 
 .overlayInputField {
@@ -94,9 +135,6 @@ body {
 }
 
 .overlayContactsInput {
-  width: 380px;
-  height: 24px;
-  gap: 10px;
   display: flex;
   border-radius: 10px;
   padding: 12px 21px 12px 21px;
@@ -105,6 +143,10 @@ body {
   font-weight: 400;
   line-height: 24px;
   outline: none;
+  width: 422px;
+  height: 50px;
+  gap: 8px;
+  cursor: pointer;
 }
 .overlayContactsInput::placeholder {
   color: #d1d1d1;
@@ -112,13 +154,101 @@ body {
 }
 
 input[type="text"]:focus,
-input[type="email"]:focus {
+input[type="email"]:focus,
+input[type="tel"]:focus {
   border: 1px solid #29abe2 !important;
 }
 
 .contactsIcon {
   width: 24px;
   height: 24px;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+}
+
+/*Overlay-Buttons*/
+
+.contactButtons {
+  display: flex;
+  width: 364px;
+  height: 57px;
+  top: 400px;
+  left: 742px;
+  gap: 24px;
+  position: fixed;
+}
+
+.cancelContainer {
+  display: flex;
+  align-items: center;
+}
+
+.contactCancelButton {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 126px;
+  height: 56px;
+  padding: 16px;
+  gap: 4px;
+  border-radius: 10px;
+  border: 1px solid #2a3647;
+  background-color: #ffffff;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #2a3647;
+  align-content: center;
+  justify-content: center;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.contactCancelButton:hover {
+  color: #29abe2;
+  border: 1px solid #29abe2;
+  box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.contactCancelButton:hover .cancelSymbol {
+  content: url("../assets/img/cancelHover.svg");
+}
+
+.cancelSymbol {
+  height: 24px;
+  width: 24px;
+}
+
+.createContainer {
+  display: flex;
+  align-items: center;
+}
+
+.contactCreateButton {
+  display: flex;
+  width: 214px;
+  height: 57px;
+  padding: 16px;
+  gap: 4px;
+  border-radius: 10px;
+  background: #2a3647;
+  color: #ffffff;
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 25.2px;
+  align-content: center;
+  justify-content: center;
+  cursor: pointer;
+  flex-direction: row-reverse;
+}
+
+.contactCreateButton:hover {
+  background-color: #29abe2;
+  border: none;
+  box-shadow: 0px 4px 4px 0px #00000040;
 }
 
 /*Kontakt-Seitenleiste*/
