--- a/css/contacts.css
+++ b/css/contacts.css
@@ -21,8 +21,9 @@ body {
 .addNewContactOverlay {
   position: fixed;
   top: 50%;
-  /*right: -100%;*/
-  transform: translateY(-50%);
+  left: 35%;
+  right: -100%;
+  transform: translate(-50%, -50%);
   width: 1212px;
   height: 592px;
   background-color: white;
@@ -31,6 +32,10 @@ body {
   z-index: 999;
   border-radius: 30px;
   opacity: 1;
+}
+
+.addNewContactOverlay.visible {
+  right: 50%;
 }
 
 /*Overlay-Fenster schließen*/
@@ -60,6 +65,15 @@ body {
   background: #2a3647;
   float: left;
   color: white;
+}
+
+.leftContainer {
+  flex-direction: column;
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 66px 48px;
 }
 
 .contactsOverlayImg {
@@ -100,7 +114,7 @@ body {
   display: flex;
 }
 
-.overlayPersonLargeImg {
+.overlayPersonContainer {
   width: 120px;
   height: 120px;
   top: 204px;
@@ -110,9 +124,12 @@ body {
   background: #d1d1d1;
   position: absolute;
   box-shadow: 0px 0px 4px 0px #0000001a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.overlayPersonLargeImg img {
+.overlayPersonLargeImg {
   width: 64px;
   height: 64px;
 }
