--- a/css/contacts.css
+++ b/css/contacts.css
@@ -321,6 +321,8 @@ input[type="tel"]:focus {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: fit-content;
+  width: 456px;
 }
 
 .letter {
