--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ body {
   font-size: 20px;
   font-weight: 400;
   line-height: 24px;
+  cursor: pointer;
 }
 
 .loginEmail::placeholder,
@@ -213,6 +214,7 @@ input[type="password"].error {
   font-weight: 400;
   line-height: 24px;
   text-align: left;
+  cursor: pointer;
 }
 
 /*Remember-Abschnitt*/
