--- a/css/add_task.css
+++ b/css/add_task.css
@@ -52,29 +52,6 @@ input {
     width: 440px;
     font-size: 20px;
 }
-/* 
-.dropdown a:hover {
-    background-color: #ddd;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-} */
-
-.show {display:block;}
 
 .content-left,
 .content-right {
@@ -82,7 +59,7 @@ input {
     flex-direction: column;
     justify-content: space-evenly;
     width: 440px;
-    height: 424pxpx;
+    height: 424px;
 }
 
 #input-title,
@@ -148,12 +125,6 @@ input {
     cursor: pointer;
 }
 
-/* .sub-hover {
-    display: none;
-    background-color: #FFFFFF;
-    padding: 10px 20px;
-} */
-
 .add-button {
     width: 24px;
     height: 24px;
@@ -180,9 +151,6 @@ input {
     width: 440px;
     background-color: #2A3647;
     color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
   }
 
 .seperator {
@@ -299,7 +267,17 @@ input {
 }
 
 #show-contacts {
-    height: 60px;
     width: 440px;
+    overflow-y: auto;
+}
+
+.contact-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.contacts-checkbox {
+    width: 20px;
 }
 
